# SUITS

./: .env.example  .gitignore  AGENTS.md  HACKATHON.md  HANDBOOK.md  PLAN.md  README.md  ROADMAP.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  wrangler.jsonc  wrangler.pdf-extraction.jsonc
convex/: artifacts.ts  autonomous.ts  caseCompileClaims.integration.test.ts  caseCompileClaims.test.ts  caseCompileClaims.ts  caseCompileQuota.test.ts  caseCompileQuota.ts  caseCompileReplay.test.ts  caseCompileReplay.ts  caseDrafts.test.ts  caseDrafts.ts  casePublication.integration.test.ts  caseServiceBoundary.test.ts  caseServiceBoundary.ts  caseStorageReconciler.integration.test.ts  caseStorageReconciler.test.ts  caseStorageReconciler.ts  caseUploadCleanup.test.ts  caseUploadCleanup.ts  caseUploads.ts  cases.ts  courtRecords.integration.test.ts  courtRecords.resources.test.ts  courtRecords.ts  courtRecordsHttp.integration.test.ts  courtroomGeneratedArtifacts.integration.test.ts  courtroomGeneratedArtifacts.ts  courtroomModelCalls.integration.test.ts  courtroomModelCalls.ts  crons.ts  evals.ts  events.ts  finalBoundInterruption.integration.test.ts  finalBoundInterruptionClaims.ts  hearingAudioAudits.integration.test.ts  hearingAudioAudits.ts  hearingRuntime.integration.test.ts  hearingRuntime.ts  http.security.test.ts  http.ts  (+14 more)
convex/_generated/: api.d.ts
docs/: ARCHITECTURE.md  ASSETS.md  CASE_FORMAT.md  DEMO_SCRIPT.md  LOCAL_SPEECH.md  SECURITY_AND_PRIVACY.md
docs/build-week/: BASELINE.md  (+3 more)
scripts/: run-e2e-next.ps1  run-e2e-speech.ps1  run-legacy-gate3.ps1  setup-local-speech.ps1  verify-case-compile-singleflight.ps1  verify-convex-public-surface.ps1  verify-production-boundary.ps1  verify-workerd-pdf.ps1  verify.ps1
services/speech/: pyproject.toml
services/speech/src/suits_speech/: __init__.py  app.py  audio_queue.py  capacity.py  clip_cache.py  config.py  doctor.py  health.py  protocol.py  session.py  smoke.py  tts_lane.py  vad.py
services/speech/src/suits_speech/providers/: __init__.py  base.py  fake.py  kokoro.py  nemotron.py  unavailable.py
services/speech/tests/: test_app.py  test_audio_queue.py  test_clip_cache.py  test_config.py  test_doctor.py  test_fake_providers.py  test_kokoro_provider.py  test_nemotron_provider.py  test_protocol.py  test_provider_selection.py  test_runtime_capacity.py  test_runtime_load.py  test_session.py  test_session_actor_audit.py  test_session_races.py  test_smoke.py  test_tts_lane.py  test_vad.py
(+395 files in other folders)
