[project]
name = "suits-speech"
version = "0.1.0"
description = "Local real-time speech companion for the SUITS courtroom simulator"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.11,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
suits-speech = "suits_speech.app:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.12,<1",
  "websockets>=14,<17",
]
local-cpu = [
  "en-core-web-sm==3.8.0",
  "kokoro==0.9.4",
  "librosa>=0.11,<0.12",
  "torch==2.11.0",
  "transformers>=5.13,<5.14",
]
local-cuda = [
  "en-core-web-sm==3.8.0",
  "kokoro==0.9.4",
  "librosa>=0.11,<0.12",
  "torch==2.11.0",
  "transformers>=5.13,<5.14",
]

[tool.uv]
conflicts = [
  [
    { extra = "local-cpu" },
    { extra = "local-cuda" },
  ],
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
torch = [
  { index = "pytorch-cpu", extra = "local-cpu" },
  { index = "pytorch-cu130", extra = "local-cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suits_speech"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
